Frontend(chore) Created css files for private and public pofile page and matched design structure

--- a/frontend/src/components/following/followerSheet.css
+++ b/frontend/src/components/following/followerSheet.css
@@ -16,11 +16,15 @@
   #followButton {
     width: 180px;
     height: 48px;
+    background-color: #007bff;
+    color: white;
   }
   
   #unfollowButton {
     width: 180px;
     height: 48px;
+    background-color: #007bff;
+    color: white;
   }
   
   #editProfileButton {
