frontend(chore): created a Profile drop down in the nav bar for View Profile, Edit Profile, Logout

--- a/frontend/src/components/pages/user/privateProfile.css
+++ b/frontend/src/components/pages/user/privateProfile.css
@@ -12,7 +12,7 @@
   padding: 20px;
   color: #fff;
   display: flex;
-  justify-content: flex-start; /* Keep it on the left */
+  justify-content: flex-start;
   align-items: flex-start;
 }
 
