--- a/frontend/src/components/pages/publicFeatures/mapPage.css
+++ b/frontend/src/components/pages/publicFeatures/mapPage.css
@@ -77,3 +77,16 @@
     margin-bottom: 20px;
     margin-top: 20px;
   }
+
+  .login-alert-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
+  
