--- a/frontend/src/components/pages/publicFeatures/landingPage.css
+++ b/frontend/src/components/pages/publicFeatures/landingPage.css
@@ -8,7 +8,7 @@ body {
 }
 
 .hero-section {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRSbgRXhK3REZZHx9dG600OqgVgIZWg3Dyng&usqp=CAU');
+  background-image: url('https://cdn.shopify.com/s/files/1/2345/0597/collections/BN3TH-Social-Ads-Mountain-Biking-Hero-2560x1440.jpg?v=1582669071');
   background-size: cover;
   background-position: center;
   height: 400px;
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: #ffffff;
   position: relative;
 }
 
@@ -26,12 +26,16 @@ body {
 }
 
 .landing-title {
+  display: flex;
+  justify-content: center;
   font-size: 3rem;
   margin-bottom: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .landing-text {
+  display: flex;
+  justify-content: center;
   font-size: 1.2rem;
   margin-bottom: 30px;
 }
